# serve-share-platform

./: .env  .gitignore  Cargo.toml  README.md
.trae/specs/api-admin-enhancements/: checklist.md  spec.md  tasks.md
.trae/specs/dashboard-api-enhancements/: checklist.md  spec.md  tasks.md
.trae/specs/platform-v2-enhancements/: checklist.md  spec.md  tasks.md
.trae/specs/premium-package-server-info/: checklist.md  spec.md  tasks.md
.trae/specs/server-description-provider/: checklist.md  spec.md  tasks.md
.trae/specs/settlement-dispute-nat-enhancements/: checklist.md  spec.md  tasks.md
.trae/specs/tea-server-platform/: checklist.md  spec.md  tasks.md
src/: config.rs  db.rs  main.rs
src/models/: mod.rs
src/routes/: admin.rs  api.rs  auth.rs  mod.rs  user.rs
src/services/: agent.rs  core_hours.rs  mod.rs  payment.rs  ssh_proxy.rs
static/css/: style.css
tea-server-platform/: .dockerignore  .env.example  .env.okp.ccwu.cc  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.okp.ccwu.cc.conf
tea-server-platform/.cargo/: config.toml
tea-server-platform/agent/: agent.py  agent.service  install.sh
tea-server-platform/src/: config.rs  db.rs  main.rs
tea-server-platform/src/handlers/: api.rs  mod.rs  websocket.rs
tea-server-platform/src/models/: mod.rs
tea-server-platform/src/services/: auth.rs  core_hours.rs  crypto.rs  ldc_payment.rs  machine_lifecycle.rs  mail.rs  mail_templates.rs  mod.rs  opengfw.rs  rate_limiter.rs  session.rs  ssh_key.rs  ssh_proxy.rs  traffic_monitor.rs
tea-server-platform/static/css/: style.css
tea-server-platform/static/js/: app.js
tea-server-platform/templates/: servers.html  warning_letter_detail.html  warning_letters.html
tea-server-platform/templates/admin/: codes.html  config.html  dashboard.html  disputes.html  invites.html  login.html  machines.html  machines_stats.html  oauth_apps.html  opengfw.html  orders.html  packages.html  servers.html  traffic_alerts.html  users.html  violations.html  warning_letters.html
tea-server-platform/templates/components/: base.html
tea-server-platform/templates/user/: auto_select.html  balance_to_code.html  connect.html  contribute.html  dashboard.html  dispute.html  error.html  index.html  machine_detail.html  machines.html  market.html  packages.html  recharge.html  redeem.html  stats.html  withdraw.html
templates/: base.html.tera  contribute.html.tera  create_vm.html.tera  index.html.tera  layout.html.tera  login.html.tera  marketplace.html.tera  my_servers.html.tera  my_vms.html.tera  packages.html.tera  recharge.html.tera  redeem.html.tera  sign_in.html.tera
templates/admin/: codes.html.tera  dashboard.html.tera  invite_codes.html.tera  layout.html.tera  packages.html.tera  servers.html.tera  settings.html.tera  users.html.tera  vms.html.tera
