[package]
name = "tea-server-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tera = "1"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
hex = "0.4"
md5 = "0.7"
tower-cookies = "0.10"
cookie = "0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dotenvy = "0.15"
ssh2 = "0.9"
urlencoding = "2"